fix lazy load images to not distort image, just crop

--- a/lesson7/lazyload/css/styles.css
+++ b/lesson7/lazyload/css/styles.css
@@ -1,12 +1,18 @@
 body{
     width: 100%;
     text-align: center;
+    display: flex;
+    flex-direction: column;
 }
-picture{
-    display: block;
-}
-img{
+body div{
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    overflow: hidden;
     width: 300px;
+}
+
+img{
     height: 400px;
 }
 img[data-src] {
